--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt_BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>NLW</title>
 
     <link rel="stylesheet" href="style.css" />
@@ -29,7 +30,6 @@
             <a id="userLink" href="https://github.com/maykbrito" target="_blank"><img src="images/github.svg" alt="ícone github" /><span id="userLogin">maykbrito</span></a>
 
             <p id="userBio">Front-end Student</p>
-
             <ul id="socialLinks">
                 <li class="youtube">
                   <a href="https://youtube.com/maykbrito" target="_blank">
@@ -37,7 +37,7 @@
                       src="images/youtube.svg"
                       alt="ícone youtube"
                     />
-                  </a>
+                  </a> 
                 </li>
                 <li class="facebook">
                   <a href="https://facebook.com/maykbrito" target="_blank">
